# telecom-rag-chatbot

./: .env.example  .gitignore  PRD.md  PROBLEM_STATEMENT.txt  README.md  app.py  chain.py  config.py  embeddings.py  ingest_all.py  ingest_faq.py  ingest_guides.py  ingest_plans.py  ingest_tickets.py  main.py  pyproject.toml  retriever.py  vectorstore.py
.streamlit/: config.toml
data/: plans.json
