[project]
name = "telecom-rag-chatbot"
version = "0.1.0"
description = "RAG telecom customer-care chatbot grounded in FAQ, tickets, and PDF guides."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.1.4",
    "langchain-huggingface>=0.1",
    "langchain-groq>=0.2",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "pypdf>=4.0",
    "streamlit>=1.36",
    "python-dotenv>=1.0",
]

[project.scripts]
telecom-cli = "main:main"
ingest-all = "ingest_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "config.py",
    "embeddings.py",
    "vectorstore.py",
    "ingest_faq.py",
    "ingest_tickets.py",
    "ingest_guides.py",
    "ingest_all.py",
    "retriever.py",
    "chain.py",
    "main.py",
    "app.py",
]
